# space_inviders

jeu/: CMakeLists.txt  Makefile  affichage_du_score.txt  moc_render_area.cpp  moc_window.cpp  partie_08  partie_08.pro  ui_mainwindow.h
jeu/image_code/: alien_bleu.xcf  alien_gris.xcf  joueur.xcf  laser.xcf
jeu/src/: Comportement.cpp  Comportement.hpp  Fondjeu.cpp  Fondjeu.hpp  Makefile  circle.cpp  circle.hpp  enonce.txt  joueur.cpp  joueur.hpp  main.cpp  mainwindow.ui  render_area.cpp  render_area.hpp  vec2.cpp  vec2.hpp  window.cpp  window.hpp
